# ci-cd-learn

./: .gitignore  Dockerfile  docker-compose.yml  main.py  pyproject.toml  render.yaml  requirements.txt  test_main.py
.github/workflows/: deploy.yml
